test/spec/import-after-memory.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/import-after-memory.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/import-after-memory.fail.wast:1:20: imports must occur before all non-import definitions
(module (memory 0) (import "" "" (global i32)))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
